shared/components/Range/range.module.scss
@import '@/shared/styles/colors.scss';

.range {
  display: flex;
  flex-direction: column;

  gap: 1.5rem;

  &__label {
    font-size: 1rem;
    font-weight: 500;
  }

  &__input {
    position: relative;

    display: flex;
    align-items: center;

    height: 0.5rem;

    background-color: $primary-dark;

    &__selection {
      position: absolute;

      height: 0.5rem;
      background-color: $primary;
    }

    &__thumb {
      position: absolute;

      width: 1.5rem;
      height: 1.5rem;
      border-radius: 100%;
      background-color: $accent-color;

      transition: background-color 0.15s, transform 0.15s;

      &:hover,
      &:focus {
        cursor: grab;
        background-color: $accent-color-light;

        transform: scale(1.15);
      }

      &:active {
        cursor: grabbing;
        transform: scale(1.15);
      }
    }

    &__range-values {
      position: relative;

      width: 100%;
      height: 1rem;

      display: flex;
      justify-content: space-between;

      &__input {
        width: 48px;
        height: 24px;

        border: none;
        border-bottom: 1px solid $white;
        background-color: transparent;

        color: $white;
        font-size: 1rem;
        font-weight: 500;
      }

      &__label {
        position: absolute;

        width: fit-content;
        max-width: 3rem;

        color: $white;
        font-size: 1rem;
        font-weight: 500;
        white-space: nowrap;
      }
    }
  }
}

